[gd_scene load_steps=18 format=3 uid="uid://c2fyjq5q62qqw"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_bxhu2"]
[ext_resource type="Texture2D" uid="uid://bn2fj84kbc584" path="res://assets/placeholders.png" id="2_ao41y"]
[ext_resource type="PackedScene" uid="uid://gcjeaid88w0v" path="res://scenes/components/gravity_component.tscn" id="3_rapeq"]
[ext_resource type="PackedScene" uid="uid://jme0o2q5dj0k" path="res://scenes/components/input_component.tscn" id="4_mom40"]
[ext_resource type="PackedScene" uid="uid://46qraosk1hc4" path="res://scenes/components/movement_component.tscn" id="5_btx7o"]
[ext_resource type="PackedScene" uid="uid://deiusueimoywy" path="res://scenes/components/animation_component.tscn" id="6_gkq1p"]
[ext_resource type="PackedScene" uid="uid://dek6esi6am4cx" path="res://scenes/components/advance_jump_component.tscn" id="7_71ktj"]
[ext_resource type="Script" path="res://scripts/state_machines/player_sm.gd" id="8_k7c01"]
[ext_resource type="PackedScene" uid="uid://b2fcwr4k5ctgt" path="res://scenes/components/slide_component.tscn" id="8_pt0cd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8gv62"]
atlas = ExtResource("2_ao41y")
region = Rect2(144, 0, 72, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vic7p"]
atlas = ExtResource("2_ao41y")
region = Rect2(0, 0, 72, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo4sj"]
atlas = ExtResource("2_ao41y")
region = Rect2(288, 0, 72, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqi11"]
atlas = ExtResource("2_ao41y")
region = Rect2(72, 0, 72, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6061i"]
atlas = ExtResource("2_ao41y")
region = Rect2(216, 0, 72, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jn31r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gv62")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vic7p")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo4sj")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqi11")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6061i")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dvlc"]
size = Vector2(20, 33.5526)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4sjq"]
size = Vector2(31, 24.375)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "input_component", "movement_component", "animation_component", "advanced_jump_component", "player_state_machine", "slide_component", "crouch_collision_check")]
collision_layer = 2
script = ExtResource("1_bxhu2")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
advanced_jump_component = NodePath("AdvanceJumpComponent")
player_state_machine = NodePath("PlayerSM")
slide_component = NodePath("SlideComponent")
crouch_collision_check = NodePath("CrouchCollisionCheck")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_jn31r")
animation = &"slide"
autoplay = "idle"

[node name="StandingCollision" type="CollisionShape2D" parent="."]
scale = Vector2(1.52, 1.52)
shape = SubResource("RectangleShape2D_3dvlc")

[node name="CrouchCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 13)
scale = Vector2(0.98, 1.04)
shape = SubResource("RectangleShape2D_t4sjq")

[node name="GravityComponent" parent="." instance=ExtResource("3_rapeq")]

[node name="InputComponent" parent="." instance=ExtResource("4_mom40")]

[node name="MovementComponent" parent="." instance=ExtResource("5_btx7o")]
ground_accel_speed = 10.0
ground_decel_speed = 20.0
air_decel_speed = 10.0

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("6_gkq1p")]
sprite = NodePath("../AnimatedSprite2D")

[node name="AdvanceJumpComponent" parent="." instance=ExtResource("7_71ktj")]

[node name="SlideComponent" parent="." instance=ExtResource("8_pt0cd")]

[node name="PlayerSM" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("8_k7c01")
sprite = NodePath("../AnimatedSprite2D")

[node name="CrouchCollisionCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, -25)
